<resources>
    <string name="app_name">Complaint</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="father_rwa_establishment">Father name</string>
    <string name="plot_house_no">Plot/House No</string>
    <string name="floor">Floor</string>
    <string name="society_building_name">Society/Building Name</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="complaintsub_type">ComplaintSub Type</string>
    <string name="khand_sector">Khand/Sector</string>
    <string name="customer_complaint_details">Customer Complaint Details</string>
    <string name="action_taken_by_control_room">Action Taken By Control Room</string>
    <string name="new_complaint">New Complaint</string>
    <string name="save_complaint">Save Complaint</string>
    <string name="locality">Locality</string>

    <string-array name="City">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Imphal</item>
    </string-array>

    <string-array name="Language">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>Tamil</item>
    </string-array>

    <string-array name="PLanets">
        <item>Earth</item>
        <item>Mars</item>
        <item>Venus</item>
        <item>Jupiter</item>
    </string-array>



</resources>