<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ownerNameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/ic_person"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerNameEditText"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_phone"
            android:layout_marginStart="10dp"
            app:prefixText="+91"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:maxLength="10"
                android:inputType="phone"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_calendar"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/complaintStatusInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/complaint_status">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/complaintStatusEditText"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fatherInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/father_rwa_establishment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fatherEditText"
                android:layout_width="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plotNoInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/plot_house_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plotNoEditText"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLines="1"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/floorInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/floor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/floorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buildingNameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_home"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/society_building_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buildingNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="4"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/complaint_type" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/complaintsub_type" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/khand_sector" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customerComplaintNameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/customer_complaint_details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerComplaintEditText"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/actionTakenInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            android:layout_marginStart="10dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:hint="@string/action_taken_by_control_room">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actionTakenEditText"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/new_complaint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/save_complaint"/>
        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>